<resources>
    <string name="action_settings">Настройки</string>

    <string name="menu_header">ÞΣԿb †﻿ØĤҠØϾ/\ØβUମ ∏Ø/\bϾҠØՐØ</string>
    <string name="main_page_text">ÞΣԿb †﻿ØĤҠØϾ/\ØβUମ ∏Ø/\bϾҠØՐØ</string>

    <string name="menu_lessons">Уроки</string>
    <string name="menu_exercises">Упражнения</string>
    <string name="menu_login">Войти</string>
    <string name="menu_registration">Регистрация</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_settings">Настройки</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="profile_temp_button">Загрузить профиль</string>
    <string name="profile_update_button">Изменить</string>
    <string name="profile_username">Никнейм</string>
    <string name="profile_firstName">Имя</string>
    <string name="profile_lastName">Фамилия</string>

    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Пароль</string>
    <string name="login_submit_button">Войти</string>
    <string name="menu_logout">Выйти</string>

    <string name="logout_dialog_title">Подтверждение выхода</string>
    <string name="logout_dialog_body">Вы действительно хотите выйти из аккаунта?</string>
    <string name="logout_dialog_submit">Ок</string>
    <string name="logout_dialog_cancel">Отмена</string>
</resources>
