<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:id="@+id/menu_group_1" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lessons"
            android:icon="@drawable/ic_account_balance"
            android:title="@string/menu_lessons" />
        <item
            android:id="@+id/nav_themes"
            android:icon="@drawable/ic_assignment"
            android:title="@string/menu_exercises" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_build"
            android:title="@string/menu_settings" />
    </group>

    <group android:id="@+id/menu_group_2" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_registration"
            android:icon="@drawable/ic_people_black"
            android:title="@string/menu_registration"
            app:actionViewClass="ru.romanov.tonkoslovie.ui"/>
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_logout" />
    </group>
</menu>